<?xml version="1.0"?>
<package format="3">
  <name>lecture3_noise_generator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aivision@todo.todo">aivision</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>tf_transformations</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




  
  

  
  
  
  